# async_file

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: lib.rs  std_impl.rs  wasm_impl.rs
