[package]
name = "async_file"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
license = "MIT OR Apache-2.0"
description = "An executor-agnostic async file IO library"
repository = "https://github.com/drewcrawford/async_file"
homepage = "https://sealedabstract.com/code/async_file"
categories = ["asynchronous","filesystem"]
keywords = ["async", "await", "file", "io", "filesystem"]
exclude = [".*"]
rust-version = "1.85.0"

[dependencies]
blocking = "1.6"
thiserror = "2.0"
logwise = "0.2"
priority = "0.1"
[dev-dependencies]
test_executors = "0.3"