[package]
name = "async_file"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
license = "MIT OR Apache-2.0"
description = "An executor-agnostic async file IO library"
repository = "https://github.com/drewcrawford/async_file"
homepage = "https://sealedabstract.com/code/async_file"
categories = ["asynchronous","filesystem"]
keywords = ["async", "await", "file", "io", "filesystem"]
exclude = [".*"]
rust-version = "1.85.1"
[dependencies]
thiserror = "2.0"
logwise = "0.2"
priority = "0.1"
[dev-dependencies]
test_executors = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
some_executor = "0.6.1"
# temp?
continue = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blocking = "1.6"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "RequestInit",
    "Request",
    "Window",
    "Location",
    "Response",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Headers"
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[patch.crates-io]
